@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.42 2005/01/19 03:00:53 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.43 2005/01/19 03:13:52 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   18 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added code to x86Template to format newly created partitions. Also added
   some error checking code. GLIStorageDevice passes 'minor' with data to
-  InstallProfile
+  InstallProfile. Added partition() call back in ArchTemplate. Fixed NFS
+  mounting code.
 
   18 Jan 2005; Preston Cody <codeman@gentoo.org>
   Took out unnecessary setting of random livecd root password. the cd already
